fix: update pre background color for improved visibility

--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,7 @@ pre {
     margin: 0;
     overflow-x: auto;
     border-radius: 8px;
-    background: #111 !important;
+    background: #111111a0 !important;
     border-radius: 8px !important;
     box-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
 }
